@@ -54,9 +54,7 @@ pipeline {
                     -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ 
                     -Dsonar.junit.reportsPath=target/surefire-reports/ \
                     -Dsonar.jacoco.reportsPath=target/jococo.exec \
-                    -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
-                    -Dsonar.javascript.disabled=true \
-                    -Dsonar.java.additionalArguments="--add-opens java.base/java.lang=ALL-UNNAMED"
+                    -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
                     ''' 
      
                 }
